use pt-v5-autotasks-library v1.3.2 with addition of  to handle re-submitting transactions for random number in case of Witnet RNG failure

--- a/.envrc.example
+++ b/.envrc.example
@@ -7,3 +7,4 @@ export CUSTOM_RELAYER_PRIVATE_KEY=
 ### DRAW AUCTION SPECIFIC:
 
 export REWARD_RECIPIENT=''
+export ERROR_STATE_MAX_GAS_COST_THRESHOLD_USD=''
