disable gnosis chiado and scroll sepolia for now since they're erroring out of funds, but too hard to get funds from faucets for those chains

--- a/.github/workflows/cron.gnosis-chiado.yml
+++ b/.github/workflows/cron.gnosis-chiado.yml
@@ -17,6 +17,7 @@ permissions: write-all
 jobs:
   runCLI:
     name: Draw Auction Bot
+    if: false
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 1
